test_suite5/ALAN/test_suite/alan-2022-examples/failing/002590_mutation.alan
source x5 begin KMPUa := array 1 not end
